--- a/src/main/resources/nomenclatures/pays.yaml
+++ b/src/main/resources/nomenclatures/pays.yaml
@@ -50,6 +50,7 @@ clause:
   - name: status
     values:
       - 0
+      - 1
   - name: lang
     values:
       - FR
@@ -61,7 +62,7 @@ cache:
   #La durée (seconde) de validité de la table H2. Au dela de cette durée, le système requête la base principale.
   expiration: 60
 
-#Rajoute dans le retour prévu, le nombre d'élément au total et nombre d'éléments retournés
+#Rajoute dans le retour prévu, le nombre d'élément au total et le nombre d'éléments retournés
 summary:
   enabled: 1
   nbElementsAttributeName: "elementsReturn"
