--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 # ===============================
+# = Service configuration's
+# ===============================
+server:
+  port: 8090
+
+# ===============================
 # = DATA SOURCE
 # ===============================
 # H2
@@ -19,3 +25,4 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
